tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ptr_arith_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/ptr-arith-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "abcdefghijkl" [cir_private, default, align 1, dso_local, constant]

fn f(%arg0: s8i*, %arg1: u32i) -> s8i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: u32i):
        %18 = alloca s8i*, "s", align 8
        %19 = alloca u32i, "i", align 4
        %20 = alloca s8i*, "__retval", align 8
        store %arg0, %18
        store %arg1, %19
        %21 = load %19 : u32i, align 4
        %22 = const 3 : u32i
        %23 = add %21, %22 : u32i
        %24 = const 1 : u32i
        %25 = sub %23, %24 : u32i
        %26 = cast(integral) %25 : u64i
        %27 = load %18 : s8i*, align 8
        %28 = ptr_stride %27, %26 : s8i*
        store %28, %20
        %29 = load %20 : s8i*
        return %29
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "str", align 8
    %2 = alloca s8i*, "x2", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @.str : s8i[13]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    store %5, %1, align 8
    %6 = load %1 : s8i*, align 8
    %7 = const 12 : u32i
    %8 = call @f(%6, %7) : s8i* [all]
    store %8, %2, align 8
    scope {
        %12 = load %1 : s8i*, align 8
        %13 = const 14 : s32i
        %14 = ptr_stride %12, %13 : s8i*
        %15 = load %2 : s8i*, align 8
        %16 = cmp ne %14, %15 : bool
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %9 = get_global @exit : ((s32i) -> void)*
    %10 = const 0 : s32i
    call @exit(%10) [all]
    %11 = load %0 : s32i
    return %11
}
